2003-03-25  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse): Accept owner-list as well as
	list-owner in To: lines when extracting special envelope info.
	(parse_dsn): Be more tolerant of weird Action: entries.

2003-03-11  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sync_msgs)  Declare undeclared variables.

	* lib/Mj/Resend.pm:  (_check_mime)  Change calling conventions
	to support format files.

2003-03-09  Jason Tibbitts <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (make_bsmtpenvelope): 
	* lib/Mj/Deliver/Dest.pm (make_envelope): 
	Pass the substitution string down to the envelope.
	
	* lib/Mj/Deliver/Envelope.pm (send): 
	* lib/Mj/Deliver/BSMTPEnvelope.pm (send):
	Substitute the contents of $self->{personal} instead of hardcoding
	$MSGRCPT.

2003-03-09  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (lock)  Bugfix:  Load the configuration
	file immediately if it has not already been loaded.
	Thanks to Robert.

2003-03-06  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Accommodate IPv6
	addresses.  Thanks to Michael Richardson.

2003-03-04  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sync_msgs)  Bugfix:  Collect stats
	about the final message instead of the original message.
	Thanks to Robert.

2003-03-03  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Include the character
	set when displaying part of a message with the archive or
	tokeninfo command.  Thanks to Roger Klorese.

	* lib/Majordomo.pm:  (_get_msg_data)  Set the charset for
	message part 0.

	* lib/Mj/Config.pm:  (parse_access_rules)  Do not issue a
	warning for replyfile=NONE.

	* lib/Mj/MIMEParser.pm:  (get_entity_structure)  Include the
	character set for each part in the results.

	* lib/Mj/Resend.pm:  (post)  Bugfix:  Remove the spool file
	if a message is denied and no reply is necessary.
	Thanks to Mathieu Arnold.
	(_within_limits, _check_header)  Use error files 